rendered/envs/alpha/argocd/ingressroute-argocd-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: argocd-vpn
  namespace: argocd
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`argocd.ts.zebradil.dev`) || Host(`argocd.junior.ts.zebradil.dev`)
      services:
        - name: argocd-server
          port: http
